[package]
name = "persway"
version = "0.3.2"
authors = ["John Axel Eriksson <john@insane.se>"]
edition = "2018"
description = "Sway IPC daemon"
repository = "https://github.com/johnae/persway"
readme = "README.md"
license = "MIT"
categories = ["asynchronous", "concurrency", "network-programming"]
keywords = ["sway", "swaywm", "swayipc", "ipc", "async"]

[dependencies]
structopt = "0.3"
swayipc = { version = "2.4", features = ["async", "event_stream"] }
signal-hook = "0.1"