[package]
name = "persway"
version = "0.4.1"
authors = ["John Axel Eriksson <john@insane.se>"]
edition = "2018"
description = "Sway IPC daemon"
repository = "https://github.com/johnae/persway"
readme = "README.md"
license = "MIT"
categories = ["asynchronous", "concurrency", "network-programming"]
keywords = ["sway", "swaywm", "swayipc", "ipc", "async"]

[dependencies]
structopt = "0.3"
swayipc-async = "2.0.1"
async-std = { version = "1", features = ["attributes"]}
signal-hook-async-std = "0.2"
signal-hook = "0.3"
anyhow = "1"