[package]
name = "persway"
version = "0.6.2"
authors = ["John Axel Eriksson <john@insane.se>"]
edition = "2021"
description = "Sway IPC daemon"
repository = "https://github.com/johnae/persway"
readme = "README.md"
license = "MIT"
categories = ["asynchronous", "concurrency", "network-programming"]
keywords = ["sway", "swaywm", "swayipc", "ipc", "async"]

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
either = "1"
env_logger = "0.10"
swayipc-async = "2.0.1"
swayipc-types = "1.3.0"
async-std = { version = "1.12", features = ["attributes"]}
signal-hook-async-std = "0.2"
signal-hook = "0.3"
anyhow = "1"
async-trait = "0.1"
futures = "0.3"